--- a/admin/index.html
+++ b/admin/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>大事件-后台首页</title>
+    <title>大事件-后台首页(练习)</title>
     <link rel="stylesheet" href="js/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/iconfont.css">
     <link rel="stylesheet" href="css/main.css">
-    <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="./js/jquery-1.12.4.min.js"></script>
     <!-- 导入bootstrap的js文件 -->
     <script src="./js/bootstrap/js/bootstrap.min.js"></script>
 </head>
@@ -25,18 +25,24 @@
             <b>管理员</b>
         </div>
         <div class="menu">
-            <div class="level01 active"><a href="#" target="_self"><i
+            <div class="level01 active"><a href="main_count.html" target="main_frame"><i
                         class="iconfont icon-yidiandiantubiao04"></i><span>首页</span></a></div>
             <div class="level01"><a href="#"><i class="iconfont icon-icon-article"></i><span>文章管理</span><b
                         class="iconfont icon-arrowdownl"></b></a></div>
             <ul class="level02">
-                <li><a href="#" target="_self"><i class="iconfont icon-previewright"></i><span>文章列表</span></a></li>
-                <li><a href="#" target="_self"><i class="iconfont icon-previewright"></i><span>发表文章</span></a></li>
-                <li><a href="#" target="m_self"><i class="iconfont icon-previewright"></i><span>文章类别管理</span></a></li>
+                <li><a href="./article_list.html" target="main_frame"><i
+                            class="iconfont icon-previewright"></i><span>文章列表</span></a></li>
+                <li><a href="./article_release.html" target="main_frame"><i
+                            class="iconfont icon-previewright"></i><span>发表文章</span></a></li>
+                <li><a href="./article_category.html" target="main_frame"><i
+                            class="iconfont icon-previewright"></i><span>文章类别管理</span></a></li>
             </ul>
 
-            <div class="level01"><a href="#" target="_self"><i class="iconfont icon-comment"></i><span>评论管理</span></a></div>
-            <div class="level01" id="user"><a href="#" target="_self"><i class="iconfont icon-user"></i><span>个人中心</span></a></div>
+            <div class="level01"><a href="./comment_list.html" target="main_frame"><i
+                        class="iconfont icon-comment"></i><span>评论管理</span></a>
+            </div>
+            <div class="level01" id="user"><a href="./user.html" target="main_frame"><i
+                        class="iconfont icon-user"></i><span>个人中心</span></a></div>
         </div>
     </div>
     <!-- 顶部栏 -->
@@ -46,15 +52,53 @@
             <i class="iconfont icon-search"></i>
         </form>
         <div class="user_center_link">
-            <a href="./user.html"  target="_self">个人中心</a>
+            <a href="./user.html" target="main_frame">个人中心</a>
             <img src="images/2.jpg" alt="person">
             <a href="javascript:void(0)" class="logout"><i class="iconfont icon-tuichu"></i> 退出</a>
         </div>
     </div>
     <!-- 右侧主体内容 -->
     <div class="main" id="main_body">
-        
+        <iframe src="./main_count.html" name="main_frame" frameborder="0" style="width: 100%;height:100%"></iframe>
     </div>
+    <script>
+        $(function () {
+            /* 1.页面一加载请求个人信息：渲染页面 */
+            $.ajax({
+                url: 'http://localhost:8080/api/v1/admin/user/info',
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    console.log(backData);
+                    $('.user_info>img').attr('src', backData.data.userPic);
+                    $('.user_center_link>img').attr('src', backData.data.userPic);
+                    $('.user_info>span').text('欢迎' + backData.data.nickname);
+                }
+            });
+            /* 2.退出登录功能 */
+            $('.logout').click(function () {
+                localStorage.removeItem('token');
+                window.location.href = './login.html';
+            })
+            /* 左侧导航栏点击高亮效果 */
+            $('.menu>.level01').click(function () {
+                $(this).addClass('active').siblings().removeClass('active');
+                if ($(this).index() == 1) {
+                    $('ul.level02').slideToggle();
+                    $('.level01 b').toggleClass('rotate0');
+                    $('.level02 a:eq(0)')[0].click();
+                } else {
+                    $('ul.level02').slideUp();
+                    $('.level01 b').removeClass('rotate0');
+                }
+            });
+            $('.level02>li').click(function () {
+                $(this).addClass('active').siblings().removeClass('active');
+            })
+        });
+    </script>
+
+
 </body>
 
 </html>
