--- a/admin/article_list.html
+++ b/admin/article_list.html
@@ -13,6 +13,7 @@
     <script src="js/jquery-1.12.4.min.js"></script>
     <!-- 引入模板引擎js文件 -->
     <script src="./js/template-web.js"></script>
+    <script src="./js/jquery.twbsPagination.js"></script>
 </head>
 
 <body>
@@ -70,6 +71,138 @@
             </table>
         </div>
     </div>
+    <!-- 分页插件HTML结构 -->
+    <div class="row text-center">
+        <ul id="pagination" class="pagination-sm"></ul>
+    </div>
+
+    <script src="./js/https.js"></script>
+    <!-- 文章分类模板 -->
+    <script id="cat_list" type="text/html">
+         <option value="">所有分类</option>
+         {{ each data v}}
+         <option value="{{ v.id}}}">{{ v.name}}</option>
+         {{ /each }}
+    </script>
+    <!-- 文章列表模板 -->
+    <script id="art_list" type="text/html">
+    {{ each data.data v }}
+       <tr>
+            <td>{{ v.title }}</td>
+            <td>{{ v.author }}</td>
+            <td>{{ v.category }}</td>
+            <td class="text-center">{{ v.date}}</td>
+            <td class="text-center">{{ v.state}}</td>
+            <td class="text-center">
+                <a href="article_edit.html" data-id="{{ v.id }}" class="btn btn-default btn-xs">编辑</a>
+                <a href="javascript:void(0);" data-id="{{ v.id }}" class="btn btn-danger btn-xs delete">删除</a>
+            </td>
+        </tr>
+    {{ /each }}
+    </script>
+    <script>
+        // 入口函数
+        $(function () {
+            /* 1.页面一加载：ajax请求所有的分类渲染页面 */
+            $.ajax({
+                url: BigNew.category_list,
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    console.log(backData);
+                    var htmlStr = template('cat_list', backData)
+                    $('#selCategory').html(htmlStr);
+                }
+            });
+            /*2.筛选文章
+            2.1 筛选按钮注册点击事件 :注意点：表单元素 阻止默认行为
+            2.2 获取下拉菜单的值  分类  状态
+            2.3 ajax请求
+            2.4 返回之后渲染页面
+            //2.5 页面一加载默认触发筛选按钮事件
+            */
+            $('#btnSearch').click(function (e) {
+                e.preventDefault();
+                var selCategory = $('#selCategory').val();
+                var selStatus = $('#selStatus').val();
+                $.ajax({
+                    url: BigNew.article_query,
+                    type: 'get',
+                    dataType: 'json',
+                    data: {
+                        type: selCategory,
+                        state: selStatus,
+                        page: 1,
+                        perpage: 15
+                    },
+                    success: function (backData) {
+                        console.log(backData);
+                        $('.table>tbody').html(template('art_list', backData));
+                        //使用分页插件
+                        //1.先销毁旧插件
+                        $('#pagination').twbsPagination('destroy');
+                        $('#pagination').twbsPagination({
+                            totalPages: backData.data.totalPage,
+                            startPage: 1,
+                            visiblePages: 10,
+                            first: '首页',
+                            prev: '上一页',
+                            next: '下一页',
+                            last: '最后一页',
+                            onPageClick: function (event, page) {
+                                console.log(('点击第' + page + '页'));
+                                getArticleList(page);
+                            }
+                        });
+                    }
+                });
+            });
+            /* 
+            * @description: ajax加载分页数据
+            * @param {type} currentPage : 页数
+            * @return: 
+            */
+            function getArticleList(currentPage) {
+                $.ajax({
+                    url: BigNew.article_query,
+                    type: 'get',
+                    dataType: 'json',
+                    data: {
+                        type: $('#selCategory').val(),
+                        state: $('#selCategory').val(),
+                        page: currentPage,
+                        perpage: 10,
+                    },
+                    success: function (backData) {
+                        console.log(backData);
+                        $('.table>tbody').html(template('art_list', backData))
+                    }
+                });
+            }
+
+            // 页面加载默认触发筛选按钮点击事件
+            $('#btnSearch').trigger('click');
+
+            /*   3.删除文章
+                      注意点 ： 删除按钮是动态添加的，需要注册委托事件 */
+            $('.table>tbody').on('click', '.delete', function () {
+                $.ajax({
+                    url: BigNew.article_delete,
+                    type: 'get',
+                    dataType: 'json',
+                    data: { id: $(this).attr('data-id') },
+                    success: function (backData) {
+                        console.log(backData);
+                        if (backData.code == 204) {
+                            alert('删除成功');
+                            window.location.reload();
+                        }
+                    }
+                });
+            });
+        });
+
+    </script>
 </body>
 
 </html>
