--- a/admin/user.html
+++ b/admin/user.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>文章列表</title>
+    <title>文章列表(练习)</title>
     <link rel="stylesheet" href="js/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/iconfont.css">
@@ -43,8 +43,13 @@
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">用户图标：</label>
                     <div class="col-sm-10">
+                        <input style="display: none" name="userPic" type="file" id="exampleInputFile">
+                        <label for="exampleInputFile">
+                            <img src="./images/2.jpg" width="50px" alt="">
+                        </label>
+                        <br>
                         <img src="images/2.jpg" alt="" class="user_pic">
-                        <input style="display: block" name="userPic" type="file" id="exampleInputFile">
+
                     </div>
                 </div>
 
@@ -75,7 +80,7 @@
                 dataType: 'json',
                 success: function (backData) {
                     console.log(backData);
-                    $('.user_pic').attr('src', backData.userPic);
+                    $('.user_pic').attr('src', backData.data.userPic);
                     for (var key in backData.data) {
                         console.log(key, backData.data[key]);
                         $('input.' + key).val(backData.data[key]);
@@ -85,7 +90,7 @@
             /* 2.文件预览：固定四个步骤 */
             //1.给file表单元素注册onchange事件
             $('#exampleInputFile').change(function () {
-                var file = this.file[0];
+                var file = this.files[0];
                 var url = URL.createObjectURL(file);
                 $('.user_pic').attr('src', url);
 
@@ -102,16 +107,18 @@
                     contentType: false,
                     processData: false,
                     success: function (backData) {
-                        if(backData.code==200){
+                            console.log(backData);
+                            
+                        if (backData.code == 200) {
                             alert('修改成功');
-                            window.parent.location.reload();
+                            // window.parent.location.reload();
+                            //   window.parent.location.reload();
+                            window.parent.location.href='./index.html';
                         }
                     }
                 });
             });
         });
-       
-
 
     </script>
 </body>
