--- a/admin/article_edit.html
+++ b/admin/article_edit.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>文章列表</title>
+    <title>文章列表(编辑))</title>
     <link rel="stylesheet" href="js/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/iconfont.css">
@@ -14,6 +14,14 @@
     <script src="js/jquery-1.12.4.min.js"></script>
     <!-- 模板引擎 -->
     <script src="./js/template-web.js"></script>
+    <!-- 导入jedate插件 -->
+    <link type="text/css" rel="stylesheet" href="./js/jedate/css/jeDate-test.css">
+    <link type="text/css" rel="stylesheet" href="./js/jedate/css/jedate.css">
+    <script type="text/javascript" src="./js/jedate/js/jedate.js"></script>
+    <!-- 导入tinyMCE -->
+    <script src="./js/tinymce/tinymce.min.js"></script>
+    <!-- jeDate + tinyMCE配置文件 -->
+    <script src="./js/config.js"></script>
 </head>
 
 <body>
@@ -53,9 +61,9 @@
                     <div class="col-sm-4">
                         <div class="jeitem">
                             <div class="jeinpbox">
-                                <input type="text" name="date" class="jeinput" id="testico" placeholder="YYYY-MM-DD">
+                                <input type="text" class="jeinput" id="testico" placeholder="YYYY-MM-DD">
                                 <div class="icons jebtns"
-                                    onclick="jeDate('#testico',{trigger:false,format: 'YYYY-MM-DD',theme: { bgcolor: '#00A680', pnColor: '#00DDAA' }})">
+                                    onclick="jeDate('#testico',{trigger:false,theme:{bgcolor:'#D91600',pnColor:'#FF6653'},format: 'YYYY-MM-DD'})">
                                 </div>
                             </div>
                         </div>
@@ -64,7 +72,7 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">文章内容：</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="mytextarea" placeholder="文章内容" value="文章内容">
+                        <textarea id="mytextarea" name="mytextarea" style="height: 350px"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
@@ -77,123 +85,114 @@
         </div>
     </div>
 
-    <!-- 准备一个 文章分类 模板 -->
+    <!-- 准备一个文章分类模板 -->
     <script id="cat_list" type="text/html">
-        {{each data v}}
-        <option value='{{v.id}}'>{{v.name}}</option>
-        {{/each}}
+        {{ each data v}}
+        <option value="{{ v.id }}">{{ v.name }}</option>
+        {{ /each }}
     </script>
-
+    <script src="./js/https.js"></script>
     <script>
-        // 入口函数
-        $(function () {
-            //1.获取artile_list页面传递过来的文章id
-            var id = window.location.href.split('=')[1];
-            console.log(id);
+        /*页面布局两个难点
+        (1)日期选择插件jeDate
+        (2)富文本编辑器插件TinyMCE
+          */
 
-            /*2.加载文章类别 
-             */
-            $.ajax({
-                type: 'get',
-                url: $.baseURL + '/admin/category/list',
-                success: function (backData) {
-                    if (backData.code == 200) {
-                        //模板引擎渲染数据
-                        $('select.category').html(template('cat_list', backData));
-                    }
-                }
-            });
+        /* 1.页面间传参 :文章id */
+        var id = window.location.href.split('=')[1];
+        console.log(id);
 
-            /*3.加载文章详细信息 
-             */
+        /* 2.根据文章id加载文章详细数据 */
+
+        $.ajax({
+            url: BigNew.category_list,
+            type: 'get',
+            dataType: 'json',
+            success: function (backData) {
+                console.log(backData);
+                $('select.category').html(template('cat_list', backData))
+            }
+        });
+
+        /* 3.根据文章id加载文章详细数据 */
+        $.ajax({
+            url: BigNew.article_search,
+            type: 'get',
+            dataType: 'json',
+            data: { id: id },
+            success: function (backData) {
+                console.log(backData);
+                $('#inputTitle').val(backData.data.title);
+                $('.article_cover').attr('src', backData.data.cover);
+                $('select.category').val(backData.data.categoryId);
+                $('#testico').val(backData.data.date);
+                // tinymce.activeEditor.setContent(backData.data.content);
+
+                /*
+                细节： tinymce这个插件比较复杂，加载需要时间
+                如果ajax请求极快，有可能数据请求完成但是插件内部没有加载完毕。导致无法展示数据
+                解决 ：
+                    （1）添加一个loading动画
+                    （2）开启定时延时加载
+                */
+                setTimeout(function () {
+                    tinymce.activeEditor.setContent(backData.data.content);
+                }, 500)
+            }
+        });
+        /* 4.文件预览 */
+        //1.给file表单元素注册onchange事件
+        $('#inputCover').change(function () {
+            //1.2 获取用户选择的图片
+            var file = this.files[0];
+            //1.3 将文件转为src路径
+            var url = URL.createObjectURL(file);
+            //1.4 将url路径赋值给img标签的src
+            $('.article_cover').attr('src', url);
+        });
+        /* 5.完成编辑按钮 :表单文件ajax提交 */
+        // 细节：表单中的元素， 需要阻止默认行为
+
+        //5.1 已发布按钮
+        $('.btn-edit').click(function (e) {
+            e.preventDefault();
+            articleEdit('已发布');
+        })
+        //5.2 草稿按钮
+        $('.btn-draft').click(function (e) {
+            e.preventDefault();
+            articleEdit('草稿');
+        })
+        //编辑文章ajax请求
+        function articleEdit(state) {
+            console.log(state);
+            //创建FormData对象：参数是表单dom对象($('#form')[0])
+            var fd = new FormData($('#form')[0]);
+            //注意点
+            //1.有时候接口需要的参数很多但是form表单中没有导致formData无法获取
+            //2.解决方案使用 formData的append()方法手动添加参数
+            fd.append('id', id);
+            fd.append('date', $('#testico').val());
+            fd.append('content', tinymce.activeEditor.getContent());
+            fd.append('state', state);//已发布
             $.ajax({
-                type: 'get',
-                url: $.baseURL + '/admin/article/search',
-                data: {
-                    id: id
-                },
+                url: BigNew.article_edit,
+                type: 'post',
+                dataType: 'json',
+                data: fd,
+                contentType: false,
+                processData: false,
                 success: function (backData) {
                     console.log(backData);
                     if (backData.code == 200) {
-                        //获取成功,把对应的数据显示在对应的标签上.
-                        $('input.title').val(backData.data.title); //文章标题
-                        $('.article_cover').attr('src', backData.data.cover); //文章封面
-                        $('select.category').val(backData.data.categoryId); //文章类别
-                        $('#testico').val(backData.data.date); //时间.
-                        /*细节：由于tinymce比较复杂，加载需要时间。
-                        一旦网速过快，就有可能导致数据已经返回，但是插件还没加载完的情况
-                        解决方案：使用定时器延迟加载（可以添加一个loading动画迷惑用户）
-                        */
-                        setTimeout(function () {
-                            tinymce.activeEditor.setContent(backData.data.content)
-                        }, 200);
-
-                    }
+                        alert('修改成功')
+                        //回退上一个页面
+                        window.history.back();
+                    };
                 }
             });
+        }
 
-            /*4.文件预览 
-            */
-            //1.给file表单元素注册onchange事件
-            $('#inputCover').change(function () {
-                //1.2 获取用户选择的图片
-                var file = this.files[0];
-                //1.3 将文件转为src路径
-                var url = URL.createObjectURL(file);
-                //1.4 将url路径赋值给img标签的src
-                $('.article_cover').attr('src', url);
-            });
-
-            /*5.编辑文章 
-            1.细节：编辑文字接口文档参数很多，FromData只能自动获取表单中部分参数
-                解决方案：使用 FromData的append()方法手动添加参数
-            2.由于编辑按钮和草稿按钮业务逻辑相同，可以封装一个函数
-                解决方案：只是state参数不同，，将state作为参数传递
-            */
-            $('.btn-edit').click(function (e) {
-                //3.1 禁用表单默认提交事件
-                e.preventDefault();
-                //3.2 ajax发送请求
-                editArticlie('已发布');
-            });
-
-            /* 4.存为草稿 */
-            $('.btn-draft').click(function (e) {
-                //3.1 禁用表单默认提交事件
-                e.preventDefault();
-                //3.2 ajax发送请求
-                editArticlie('草稿');
-            });
-
-
-            function editArticlie(state) {
-                //(3)创建fd对象
-                var fd = new FormData($('#form')[0]);
-                //追加一个修改后的内容
-                fd.append('content', tinyMCE.activeEditor.getContent());
-                //追加文章id到fd中去.
-                fd.append('id', id);
-                //追加文章状态
-                fd.append('state', state);
-                //3.发送ajax请求,完成修改
-                $.ajax({
-                    url: $.baseURL + '/admin/article/edit',
-                    type: 'post',
-                    data: fd,
-                    contentType: false,
-                    processData: false,
-                    success: function (backData) {
-                        if (backData.code == 200) {
-                            alert('修改成功!');
-                            //回退上一页
-                            window.history.back();
-                        } else {
-                            alert(backData.msg);
-                        }
-                    }
-                });
-            }
-        });
     </script>
 </body>
 
