--- a/admin/article_list.html
+++ b/admin/article_list.html
@@ -94,7 +94,7 @@
             <td class="text-center">{{ v.date}}</td>
             <td class="text-center">{{ v.state}}</td>
             <td class="text-center">
-                <a href="article_edit.html" data-id="{{ v.id }}" class="btn btn-default btn-xs">编辑</a>
+                <a href="article_edit.html?id={{ v.id }}" data-id="{{ v.id }}" class="btn btn-default btn-xs">编辑</a>
                 <a href="javascript:void(0);" data-id="{{ v.id }}" class="btn btn-danger btn-xs delete">删除</a>
             </td>
         </tr>
@@ -133,7 +133,7 @@
                         type: selCategory,
                         state: selStatus,
                         page: 1,
-                        perpage: 15
+                        perpage: 10
                     },
                     success: function (backData) {
                         console.log(backData);
@@ -143,14 +143,15 @@
                         $('#pagination').twbsPagination('destroy');
                         $('#pagination').twbsPagination({
                             totalPages: backData.data.totalPage,
+                            visiblePages: 6,
                             startPage: 1,
-                            visiblePages: 10,
                             first: '首页',
                             prev: '上一页',
                             next: '下一页',
                             last: '最后一页',
                             onPageClick: function (event, page) {
                                 console.log(('点击第' + page + '页'));
+                                //点击页码发送ajax请求分页数据
                                 getArticleList(page);
                             }
                         });
