--- a/admin/article_release.html
+++ b/admin/article_release.html
@@ -14,6 +14,15 @@
     <script src="js/jquery-1.12.4.min.js"></script>
     <!-- 模板引擎 -->
     <script src="./js/template-web.js"></script>
+    <!-- 导入jedate插件 -->
+    <link type="text/css" rel="stylesheet" href="./js/jedate/css/jeDate-test.css">
+    <link type="text/css" rel="stylesheet" href="./js/jedate/css/jedate.css">
+    <script type="text/javascript" src="./js/jedate/js/jedate.js"></script>
+    <!-- 导入tinyMCE -->
+    <script src="./js/tinymce/tinymce.min.js"></script>
+    <!-- jeDate + tinyMCE配置文件 -->
+    <script src="./js/config.js"></script>
+
 </head>
 
 <body>
@@ -51,11 +60,21 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label">发布时间：</label>
                     <div class="col-sm-4">
+                        <div class="jeitem">
+                            <div class="jeinpbox">
+                                <input type="text" name="date" class="jeinput" id="testico" placeholder="YYYY-MM-DD">
+                                <div class="icons jebtns"
+                                    onclick="jeDate('#testico',{trigger:false,theme:{bgcolor:'#D91600',pnColor:'#FF6653'},format: 'YYYY-MM-DD'})">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">文章内容：</label>
                     <div class="col-sm-10">
+                        <textarea id="mytextarea" name="mytextarea" style="height: 350px"></textarea>
+
                     </div>
                 </div>
                 <div class="form-group">
@@ -67,6 +86,90 @@
             </form>
         </div>
     </div>
+    <!-- 文章分类模板 -->
+    <script id="cat_list" type="text/html">
+        {{ each data v}}
+        <option value="{{ v.id }}">{{ v.name }}</option>
+        {{ /each }}
+    </script>
+    <script src="./js/https.js"></script>
+    <script>
+        // 入口函数
+        $(function () {
+            /*jedate+tinymce插件的使用  */
+
+
+            /* 1.页面一加载请求所有分类 */
+            $.ajax({
+                url: BigNew.category_list,
+                type: 'get',
+                dataType: 'json',
+                success: function (backData) {
+                    console.log(backData);
+                    $('select.category').html(template('cat_list', backData));
+                }
+            });
+            /*2.文件预览  */
+            //1.给file表单元素注册onchange事件
+            $('#inputCover').change(function () {
+                //1.2 获取用户选择的图片
+                var file = this.files[0];
+                //1.3 将文件转为src路径
+                var url = URL.createObjectURL(file);
+                //1.4 将url路径赋值给img标签的src
+                $('.article_cover').attr('src', url);
+            });
+
+            /* 3.发布文章：formdata上传文件
+             注意点L:表单按钮阻止默认事件
+              */
+
+            //3.1 发布
+            $('.btn-release').click(function (e) {
+                e.preventDefault();
+                releaseArticl('已发布');
+            });
+            //3.2 草稿
+            $('.btn-draft').click(function (e) {
+                e.preventDefault();
+                releaseArticl('草稿');
+                alert
+            });
+
+            function releaseArticl(state) {
+                //1.创建FormData对象：参数是表单dom对象($('#form')[0])
+                var fd = new FormData($('#form')[0]);
+                //注意点
+                //1.有时候接口需要的参数很多但是form表单中没有导致formData无法获取
+                //2.解决方案使用 formData的append()方法手动添加参数
+                //2.手动追加参数
+                /*
+                细节： formData只会获取form表单中设置了name属性的value值
+                如果没有给input设置name属性，则不会获取。需要手动追加
+                */
+                fd.append('state', state);
+                fd.append('content', tinymce.activeEditor.getContent())
+                $.ajax({
+                    url: BigNew.article_publish,
+                    type: 'post',
+                    dataType: 'json',
+                    data: fd,
+                    contentType: false,
+                    processData: false,
+                    success: function (backData) {
+                        console.log(backData);
+                        if (backData.code == 200) {
+                            alert('新增成功');
+                            window.history.back();
+                            $('.level02>li:eq(0)', window.parent.document).addClass('active').siblings().removeClass('active');
+
+                        }
+                    }
+                });
+            }
+        })
+
+    </script>
 </body>
 
 </html>
